outil/SystParser.java
// Generated from C:/Users/User/OpTaf/outil\Syst.g4 by ANTLR 4.5

  package outil;
  import systeme.*;
  import java.util.ArrayList;
  import java.util.HashMap;
  import java.io.File;
    import java.io.PrintStream;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SystParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, NUM=21, ID=22, WS=23, COMMENT=24;
	public static final int
		RULE_commandes = 0, RULE_commande = 1, RULE_fichier = 2, RULE_systeme = 3, 
		RULE_propS = 4, RULE_etatS = 5, RULE_initS = 6, RULE_etatPropS = 7, RULE_transitionS = 8, 
		RULE_synchro = 9, RULE_vecteur = 10;
	public static final String[] ruleNames = {
		"commandes", "commande", "fichier", "systeme", "propS", "etatS", "initS", 
		"etatPropS", "transitionS", "synchro", "vecteur"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';;'", "'='", "'quit'", "'todot'", "'load'", "'/'", "'./'", "'../'", 
		"'.'", "'['", "']'", "'{'", "'}'", "','", "'etat'", "';'", "'init'", "'->'", 
		"'<'", "'>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "NUM", "ID", "WS", 
		"COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Syst.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  Systeme resS;
	  Produit P;
	  static HashMap<String,Systeme> tableS = new HashMap<String,Systeme>();
	  static HashMap<String,Produit> table = new HashMap<String,Produit>();

	  public static void parserString(String s) throws Exception {
	    CharStream input = new ANTLRInputStream(s);
	    parser(input);
	  }

	  public static void parserFile(String s) throws Exception {
	    CharStream input = new ANTLRFileStream(s);
	    parser(input);
	  }

	  public static void parser(CharStream input) throws Exception {
	    SystLexer lexer = new SystLexer(input);
	    CommonTokenStream tokens = new CommonTokenStream(lexer);
	    SystParser parser = new SystParser(tokens);
	    parser.commandes();
	  }

	    public static void ecrire(String fichier, String texte) {
	    try {
	      PrintStream f = new PrintStream(new File(fichier));
	      f.print(texte);
	      f.close();
	    } catch (Exception e) {
	      System.err.println("Probleme d'ecriture !");
	    }
	  }

	public SystParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CommandesContext extends ParserRuleContext {
		public List<CommandeContext> commande() {
			return getRuleContexts(CommandeContext.class);
		}
		public CommandeContext commande(int i) {
			return getRuleContext(CommandeContext.class,i);
		}
		public CommandesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commandes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).enterCommandes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).exitCommandes(this);
		}
	}

	public final CommandesContext commandes() throws RecognitionException {
		CommandesContext _localctx = new CommandesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_commandes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << ID))) != 0)) {
				{
				{
				setState(22); 
				commande();
				setState(23); 
				match(T__0);
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandeContext extends ParserRuleContext {
		public Token i;
		public FichierContext f;
		public Token i2;
		public TerminalNode ID() { return getToken(SystParser.ID, 0); }
		public SystemeContext systeme() {
			return getRuleContext(SystemeContext.class,0);
		}
		public SynchroContext synchro() {
			return getRuleContext(SynchroContext.class,0);
		}
		public FichierContext fichier() {
			return getRuleContext(FichierContext.class,0);
		}
		public CommandeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commande; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).enterCommande(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).exitCommande(this);
		}
	}

	public final CommandeContext commande() throws RecognitionException {
		CommandeContext _localctx = new CommandeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_commande);
		try {
			setState(50);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(30); 
				((CommandeContext)_localctx).i = match(ID);
				setState(31); 
				match(T__1);
				setState(38);
				switch (_input.LA(1)) {
				case T__9:
					{
					setState(32); 
					systeme();

					            tableS.put((((CommandeContext)_localctx).i!=null?((CommandeContext)_localctx).i.getText():null),resS);
					          
					}
					break;
				case T__18:
					{
					setState(35); 
					synchro();

					            table.put((((CommandeContext)_localctx).i!=null?((CommandeContext)_localctx).i.getText():null),P);
					          
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(40); 
				match(T__2);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(41); 
				match(T__3);
				setState(42); 
				((CommandeContext)_localctx).f = fichier();
				setState(43); 
				((CommandeContext)_localctx).i2 = match(ID);


				      Systeme s = tableS.get((((CommandeContext)_localctx).i2!=null?((CommandeContext)_localctx).i2.getText():null));
				      Produit p = table.get((((CommandeContext)_localctx).i2!=null?((CommandeContext)_localctx).i2.getText():null));
				      if (s!=null)
				        ecrire(((CommandeContext)_localctx).f.val,s.toDot());
				      else if (p!=null){
				        ecrire(((CommandeContext)_localctx).f.val,p.toDot());
				      }else{
				        System.err.println("La variable " + (((CommandeContext)_localctx).i2!=null?((CommandeContext)_localctx).i2.getText():null) + " n'existe pas.");
				      }

				  
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 4);
				{
				setState(46); 
				match(T__4);
				setState(47); 
				((CommandeContext)_localctx).f = fichier();

				  try {
				    parserFile(((CommandeContext)_localctx).f.val);
				  } catch (Exception e) {
				        System.err.println("problème de lecture du fichier " + (((CommandeContext)_localctx).f!=null?_input.getText(((CommandeContext)_localctx).f.start,((CommandeContext)_localctx).f.stop):null) + ".");
				  };
				  
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FichierContext extends ParserRuleContext {
		public String val;
		public Token i;
		public Token i1;
		public List<TerminalNode> ID() { return getTokens(SystParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SystParser.ID, i);
		}
		public FichierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fichier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).enterFichier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).exitFichier(this);
		}
	}

	public final FichierContext fichier() throws RecognitionException {
		FichierContext _localctx = new FichierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fichier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			    StringBuffer s= new StringBuffer();
			  
			setState(66);
			switch (_input.LA(1)) {
			case T__5:
				{
				setState(53); 
				match(T__5);

				    s.append("/");
				  
				}
				break;
			case T__6:
				{
				setState(55); 
				match(T__6);

				    s.append("./");
				  
				}
				break;
			case T__7:
				{
				setState(57); 
				match(T__7);

				    s.append("../");
				  
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(59); 
					match(T__7);

					    s.append("../");
					  
					}
					}
					setState(65);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case ID:
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(68); 
			((FichierContext)_localctx).i = match(ID);

			    s.append((((FichierContext)_localctx).i!=null?((FichierContext)_localctx).i.getText():null));
			  
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5 || _la==T__8) {
				{
				{
				setState(74);
				switch (_input.LA(1)) {
				case T__8:
					{
					setState(70); 
					match(T__8);

					    s.append(".");
					  
					}
					break;
				case T__5:
					{
					setState(72); 
					match(T__5);

					    s.append("/");
					  
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(76); 
				((FichierContext)_localctx).i1 = match(ID);

				    s.append((((FichierContext)_localctx).i1!=null?((FichierContext)_localctx).i1.getText():null));
				  
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			    ((FichierContext)_localctx).val = s.toString();
			  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SystemeContext extends ParserRuleContext {
		public PropSContext p;
		public EtatSContext e;
		public InitSContext initS() {
			return getRuleContext(InitSContext.class,0);
		}
		public PropSContext propS() {
			return getRuleContext(PropSContext.class,0);
		}
		public EtatSContext etatS() {
			return getRuleContext(EtatSContext.class,0);
		}
		public List<EtatPropSContext> etatPropS() {
			return getRuleContexts(EtatPropSContext.class);
		}
		public EtatPropSContext etatPropS(int i) {
			return getRuleContext(EtatPropSContext.class,i);
		}
		public List<TransitionSContext> transitionS() {
			return getRuleContexts(TransitionSContext.class);
		}
		public TransitionSContext transitionS(int i) {
			return getRuleContext(TransitionSContext.class,i);
		}
		public SystemeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systeme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).enterSysteme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).exitSysteme(this);
		}
	}

	public final SystemeContext systeme() throws RecognitionException {
		SystemeContext _localctx = new SystemeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_systeme);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85); 
			match(T__9);
			setState(86); 
			((SystemeContext)_localctx).p = propS();
			setState(87); 
			match(T__10);
			setState(88); 
			match(T__11);
			setState(89); 
			((SystemeContext)_localctx).e = etatS();

			      resS= new Systeme(((SystemeContext)_localctx).e.val,((SystemeContext)_localctx).p.val.toArray(new Object[]{}));
			  
			setState(91); 
			initS();
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(92); 
					etatPropS();
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NUM) {
				{
				{
				setState(98); 
				transitionS();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104); 
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropSContext extends ParserRuleContext {
		public ArrayList<Object> val;
		public Token i0;
		public Token i1;
		public List<TerminalNode> ID() { return getTokens(SystParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SystParser.ID, i);
		}
		public PropSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).enterPropS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).exitPropS(this);
		}
	}

	public final PropSContext propS() throws RecognitionException {
		PropSContext _localctx = new PropSContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_propS);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			switch (_input.LA(1)) {
			case T__10:
				{
				((PropSContext)_localctx).val =  new ArrayList<Object>();
				}
				break;
			case ID:
				{
				setState(107); 
				((PropSContext)_localctx).i0 = match(ID);

				    ((PropSContext)_localctx).val =  new ArrayList<Object>();
				    _localctx.val.add((((PropSContext)_localctx).i0!=null?((PropSContext)_localctx).i0.getText():null));

				  
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__13) {
					{
					{
					setState(109); 
					match(T__13);
					setState(110); 
					((PropSContext)_localctx).i1 = match(ID);

					    _localctx.val.add((((PropSContext)_localctx).i1!=null?((PropSContext)_localctx).i1.getText():null));

					  
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EtatSContext extends ParserRuleContext {
		public int val;
		public Token n;
		public TerminalNode NUM() { return getToken(SystParser.NUM, 0); }
		public EtatSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_etatS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).enterEtatS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).exitEtatS(this);
		}
	}

	public final EtatSContext etatS() throws RecognitionException {
		EtatSContext _localctx = new EtatSContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_etatS);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); 
			match(T__14);
			setState(120); 
			match(T__1);
			setState(121); 
			((EtatSContext)_localctx).n = match(NUM);
			setState(122); 
			match(T__15);

			    ((EtatSContext)_localctx).val =  Integer.parseInt((((EtatSContext)_localctx).n!=null?((EtatSContext)_localctx).n.getText():null));
			  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitSContext extends ParserRuleContext {
		public Token n0;
		public Token n1;
		public List<TerminalNode> NUM() { return getTokens(SystParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(SystParser.NUM, i);
		}
		public InitSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).enterInitS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).exitInitS(this);
		}
	}

	public final InitSContext initS() throws RecognitionException {
		InitSContext _localctx = new InitSContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_initS);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125); 
			match(T__16);
			setState(126); 
			match(T__1);
			setState(127); 
			((InitSContext)_localctx).n0 = match(NUM);

			    if (resS.isState(Integer.parseInt((((InitSContext)_localctx).n0!=null?((InitSContext)_localctx).n0.getText():null))))
			        resS.addInitState(Integer.parseInt((((InitSContext)_localctx).n0!=null?((InitSContext)_localctx).n0.getText():null)));
			    else
			        System.err.println((((InitSContext)_localctx).n0!=null?((InitSContext)_localctx).n0.getText():null) + " n'est pas un état.");
			  
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(129); 
				match(T__13);
				setState(130); 
				((InitSContext)_localctx).n1 = match(NUM);

				    if (resS.isState(Integer.parseInt((((InitSContext)_localctx).n1!=null?((InitSContext)_localctx).n1.getText():null))))
				        resS.addInitState(Integer.parseInt((((InitSContext)_localctx).n1!=null?((InitSContext)_localctx).n1.getText():null)));
				    else
				        System.err.println((((InitSContext)_localctx).n1!=null?((InitSContext)_localctx).n1.getText():null) + " n'est pas un état.");
				  
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(137); 
			match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EtatPropSContext extends ParserRuleContext {
		public Token n;
		public Token i0;
		public Token i1;
		public TerminalNode NUM() { return getToken(SystParser.NUM, 0); }
		public List<TerminalNode> ID() { return getTokens(SystParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SystParser.ID, i);
		}
		public EtatPropSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_etatPropS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).enterEtatPropS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).exitEtatPropS(this);
		}
	}

	public final EtatPropSContext etatPropS() throws RecognitionException {
		EtatPropSContext _localctx = new EtatPropSContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_etatPropS);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); 
			((EtatPropSContext)_localctx).n = match(NUM);

			    int s = Integer.parseInt((((EtatPropSContext)_localctx).n!=null?((EtatPropSContext)_localctx).n.getText():null));
			    if (!resS.isState(s))
			        System.err.println(s + " n'est pas un état.");
			  
			setState(141); 
			match(T__1);
			setState(142); 
			((EtatPropSContext)_localctx).i0 = match(ID);

			    if (resS.isProp((((EtatPropSContext)_localctx).i0!=null?((EtatPropSContext)_localctx).i0.getText():null))){
			      resS.addStateProperty(s,(((EtatPropSContext)_localctx).i0!=null?((EtatPropSContext)_localctx).i0.getText():null));
			    }
			    else
			        System.err.println((((EtatPropSContext)_localctx).i0!=null?((EtatPropSContext)_localctx).i0.getText():null) + " n'est pas déclaré comme propriété.");
			    
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(144); 
				match(T__13);
				setState(145); 
				((EtatPropSContext)_localctx).i1 = match(ID);

				    if (resS.isProp((((EtatPropSContext)_localctx).i1!=null?((EtatPropSContext)_localctx).i1.getText():null))){
				        resS.addStateProperty(s,(((EtatPropSContext)_localctx).i1!=null?((EtatPropSContext)_localctx).i1.getText():null));}
				    else
				        System.err.println((((EtatPropSContext)_localctx).i1!=null?((EtatPropSContext)_localctx).i1.getText():null) + " n'est pas déclaré comme propriété.");
				  
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(152); 
			match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransitionSContext extends ParserRuleContext {
		public Token n0;
		public Token n1;
		public Token i0;
		public Token i1;
		public List<TerminalNode> NUM() { return getTokens(SystParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(SystParser.NUM, i);
		}
		public List<TerminalNode> ID() { return getTokens(SystParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SystParser.ID, i);
		}
		public TransitionSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transitionS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).enterTransitionS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystListener ) ((SystListener)listener).exitTransitionS(this);
		}
	}

	public final TransitionSContext transitionS() throws RecognitionException {
		TransitionSContext _localctx = new TransitionSContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_transitionS);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154); 
			((TransitionSContext)_localctx).n0 = match(NUM);
			setState(155); 
			match(T__17);
			setState(156); 
			((TransitionSContext)_localctx).n1 = match(NUM);

			  int src = Integer.parseInt((((TransitionSContext)_localctx).n0!=null?((TransitionSContext)_localctx).n0.getText():null));
			  int tgt = Integer.parseInt((((TransitionSContext)_localctx).n1!=null?((TransitionSContext)_localctx).n1.getText():null));
			  boolean id = false;

			    if (!resS.isState(src))
			        System.err.println(src + " n'est pas un état.");
			    if (!resS.isState(tgt))
			        System.err.println(tgt + " n'est pas un état.");


			setState(170);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(158); 
				match(T__9);
				setState(159); 
				((TransitionSContext)_localctx).i0 = match(ID);

				  id = true;
				  resS.addTransition(src,tgt,(((TransitionSContext)_localctx).i0!=null?((TransitionSContext)_localctx).i0.getText():null));

				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__13) {
					{
					{
					setState(161); 
					match(T__13);
					setState(162); 
					((TransitionSContext)_localctx).i1 = match(ID);

					  resS.addTransition(src,tgt,(((TransitionSContext)_localctx).i1!=null?((TransitionSContext)_localctx).i1.getText():null));

					}
					}
					setState(168);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(169); 
				match(T__10);
				}
			}


			  if (!id)
			    resS.addTransition(src,tgt,"*");


			setState(173); 
			match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
